AB#205976: Added word break for long words, prevented text-align to affect cards

--- a/docroot/themes/custom/emulsifymars/components/02-molecules/product-content-pair-up/_product-content-pair-up.scss
+++ b/docroot/themes/custom/emulsifymars/components/02-molecules/product-content-pair-up/_product-content-pair-up.scss
@@ -117,6 +117,7 @@
           margin-top: 0;
           margin-bottom: 3rem;
           text-decoration: none;
+          word-break: break-word;
 
           @include xl {
             font-size: 6.4rem;
@@ -150,7 +151,7 @@
           }
 
           &::after {
-            bottom: -110px;
+            bottom: -150px;
             background-color: clr(secondary);
           }
         }
@@ -178,6 +179,7 @@
 
       .wrapper > section {
         max-width: 31.8rem;
+        text-align: initial;
       }
     }
   }
